--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@drawable/hrlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmployeeHireHRPanel">
-        <activity android:name=".ApplicantsOfJobActivity"></activity>
+        <activity android:name=".JobPositionSelectionActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity android:name=".ApplicantsOfJobActivity" />
         <activity android:name=".JobAdvertisementActivity" />
         <activity android:name=".SigninActivity">
             <intent-filter>
