--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/hrlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmployeeHireHRPanel">
-        <activity android:name=".ApplicantAcceptRejectActivity"></activity>
+        <activity android:name=".SearchDataActivity"></activity>
+        <activity android:name=".ApplicantAcceptRejectActivity" />
         <activity android:name=".JobPositionSelectionActivity">
 
             <!-- <intent-filter> -->
